<resources>
    <string name="app_name" translatable="false">MADAGASCAPP</string>
    <string name="btn_registrar">Register</string>
    <string name="btn_login">Login</string>
    <string name="text_pass">Password:</string>
    <string name="text_usuario">User:</string>
    <string name="btn_guardar">Save</string>
    <string name="spn_delegation">Delegation:</string>
    <string name="add">Add</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="population">City:</string>
    <string name="zip_code">Zip Code:</string>
    <string name="tlfn">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="historic">Show previous visits</string>
    <string name="ordersTitle">Orders</string>
    <string name="orderHeader">Order header info</string>
    <string name="orderLinesTitle">Order lines info</string>
    <string name="oderDate">Order date:</string>
    <string name="paymentDate">Payment date:</string>
    <string name="shippingDate">Shipping date:</string>
    <string name="next">Next</string>
    <string name="partner">Partner:</string>
    <string name="endOder">End Order</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="product">Product:</string>
    <string name="insertLine">Insert new line</string>
    <string name="spn_comercial">Comercial:</string>
    <string name="catalog">Catalog</string>
    <string name="cargar">Upload data</string>
    <string name="sincronizar">Sync data</string>
    <string name="categoria"><u>Category</u></string>
    <string name="stock"><u>Stock</u></string>Stock<string>
    <string name="cat_price" ><u>Price</u></string>
</resources>