<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/edt_usr"
        app:layout_constraintTop_toTopOf="@+id/edt_usr"
        app:layout_constraintBottom_toBottomOf="@+id/edt_usr"
        android:text="@string/text_usuario"/>

    <EditText
        android:id="@+id/edt_usr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/txt_psswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/edt_psswd"
        app:layout_constraintTop_toTopOf="@+id/edt_psswd"
        app:layout_constraintBottom_toBottomOf="@+id/edt_psswd"
        android:text="@string/text_pass"/>

    <EditText
        android:id="@+id/edt_psswd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edt_usr"
        app:layout_constraintTop_toBottomOf="@id/edt_usr"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txt_psswd"
        app:layout_constraintTop_toBottomOf="@+id/edt_psswd"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/edt_psswd"
        app:layout_constraintTop_toBottomOf="@id/edt_psswd"
        android:text="@string/btn_registrar"/>
</androidx.constraintlayout.widget.ConstraintLayout>