<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_usr"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/edt_usr"
        app:layout_constraintBottom_toBottomOf="@+id/edt_usr"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:text="@string/text_usuario"/>

    <EditText
        android:id="@+id/edt_usr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cmbDelegation"
        app:layout_constraintBottom_toTopOf="@id/edt_psswd"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txt_psswd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/edt_psswd"
        app:layout_constraintBottom_toBottomOf="@id/edt_psswd"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:text="@string/text_pass"/>

    <EditText
        android:id="@+id/edt_psswd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cmbDelegation"
        app:layout_constraintBottom_toTopOf="@id/cmbDelegation"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txt_spinnerDelegation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spn_delegation"
        app:layout_constraintStart_toStartOf="@+id/txt_psswd"
        app:layout_constraintTop_toTopOf="@+id/cmbDelegation" />

    <Spinner
        android:id="@+id/cmbDelegation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txt_spinnerComercial"
        app:layout_constraintTop_toTopOf="@id/txt_spinnerComercial"
        app:layout_constraintBottom_toTopOf="@id/cmbComercial"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/txt_spinnerComercial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spn_comercial"
        app:layout_constraintStart_toStartOf="@+id/txt_spinnerDelegation"
        app:layout_constraintTop_toTopOf="@+id/cmbComercial"
        app:layout_constraintBottom_toBottomOf="cmbComercial"
        tools:layout_editor_absoluteY="312dp" />

    <Spinner
        android:id="@+id/cmbComercial"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txt_spinnerComercial"
        app:layout_constraintTop_toBottomOf="@+id/cmbDelegation"
        app:layout_constraintBottom_toTopOf="@id/btn_guardar"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        />


    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>