<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txvTituloCabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:text="@string/orderHeader"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/linParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTituloCabecera"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- ARTICULO -->
            <TextView
                android:id="@+id/txvProductName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spnNombreArticulo"
                app:layout_constraintBottom_toBottomOf="@+id/spnNombreArticulo"
                android:gravity="center_vertical"/>

            <Spinner
                android:id="@+id/spnNombreArticulo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txvLineQuantity"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"/>

            <!-- CANTIDAD -->
            <TextView
                android:id="@+id/txvLineQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                app:layout_constraintTop_toTopOf="@id/edtLineQuantity"
                app:layout_constraintBottom_toBottomOf="@id/edtLineQuantity"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"/>

            <EditText
                android:id="@+id/edtLineQuantity"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spnNombreArticulo"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="number"
                android:layout_marginTop="20dp" />

            <!-- PRECIO -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/price"
                app:layout_constraintTop_toTopOf="@id/edtLinePrice"
                app:layout_constraintBottom_toBottomOf="@id/edtLinePrice"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"/>

            <EditText
                android:id="@+id/edtLinePrice"
                android:layout_width="202dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtLineQuantity" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclLineas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linParameters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnEndOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endOder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnInsertLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>